[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/PauseMenu.gd" type="Script" id=1]

[node name="PauseMenu" type="Popup"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_top = 100.0
margin_right = -200.0
margin_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 7
size_flags_vertical = 7

[node name="CenterContainer" type="CenterContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/CenterContainer"]
margin_left = 253.0
margin_top = 137.0
margin_right = 371.0
margin_bottom = 263.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="Panel/CenterContainer/VBoxContainer"]
margin_right = 118.0
margin_bottom = 14.0
text = "Options"
align = 1

[node name="MusicCheck" type="CheckButton" parent="Panel/CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 118.0
margin_bottom = 58.0
text = "Music"

[node name="SfxCheck" type="CheckButton" parent="Panel/CenterContainer/VBoxContainer"]
margin_top = 62.0
margin_right = 118.0
margin_bottom = 102.0
text = "SFX"

[node name="OKButton" type="Button" parent="Panel/CenterContainer/VBoxContainer"]
margin_top = 106.0
margin_right = 118.0
margin_bottom = 126.0
text = "OK"

[connection signal="about_to_show" from="." to="." method="_on_PauseMenu_about_to_show"]
[connection signal="toggled" from="Panel/CenterContainer/VBoxContainer/MusicCheck" to="." method="_on_MusicCheck_toggled"]
[connection signal="toggled" from="Panel/CenterContainer/VBoxContainer/SfxCheck" to="." method="_on_SfxCheck_toggled"]
[connection signal="pressed" from="Panel/CenterContainer/VBoxContainer/OKButton" to="." method="_on_OKButton_pressed"]
